0.87_02
    Test Fixes
    * Some filesystems don't like it when you open a file for writing multiple
      times.  Fixes t/Builder/reset.t. [rt.cpan.org 17298]

0.87_01  Sun Mar 29 09:56:52 BST 2009
    New Features
    * done_testing() allows you to declare that you have finished running tests,
      and how many you ran.  It is a safer no_plan and effectively replaces it.
    * output() now supports scalar references.

    Feature Changes
    * You can now run a test without first declaring a plan.  This allows
      done_testing() to work.
    * You can now call current_test() without first declaring a plan.

    Bug Fixes
    * skip_all() with no reason would output "1..0" which is invalid TAP.  It will
      now always include the SKIP directive.

    Other
    * Repository moved to github.


0.86  Sun Nov  9 01:09:05 PST 2008
    Same as 0.85_01


0.85_01  Thu Oct 23 18:57:38 PDT 2008
    New Features
    * cmp_ok() now displays the error if the comparison throws one.
      For example, broken overloaded objects.

    Bug Fixes
    * cmp_ok() no longer stringifies or numifies its arguments before comparing.
      This makes cmp_ok() properly test overloaded ops.
      [rt.cpan.org 24186] [code.google.com 16]
    * diag() properly escapes blank lines.

    Feature Changes
    * cmp_ok() now reports warnings and errors as coming from inside cmp_ok,
      as well as reporting the caller's file and line.  This let's the user
      know where cmp_ok() was called from while reminding them that it is
      being run in a different context.

    Other
    * Dependency on ExtUtils::MakeMaker 6.27 only on Windows otherwise the
      nested tests won't run.


0.84  Wed Oct 15 09:06:12 EDT 2008
    Other
    * 0.82 accidentally shipped with experimental Mouse dependency.


0.82  Tue Oct 14 23:06:56 EDT 2008
    Bug Fixes
    - 0.81_01 broke $TODO such that $TODO = '' was considered todo.


0.81_02  Tue Sep  9 04:35:40 PDT 2008
    New Features